examples/test/testpolicy4861.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4861
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key41: value24
      key13: value46
      key7: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value47
          key38: value11
          key26: value48
      podSelector:
        matchLabels:
          key4: value21
          key31: value16
